# prac

./: CMakeLists.txt  main.cpp
pbs 1/: mz01-3.cpp
pbs 1 2019-03-05/: mz01-1.cpp  mz01-2.cpp  mz01-4.cpp  mz01-5.cpp
pbs 10/: 1.cpp  1a.cpp  2.cpp  3.cpp  4.cpp  5.cpp
pbs 11/: 1.cpp  2.cpp  3.cpp  5.cpp  6.cpp
pbs 12/: 1.cpp  2.cpp  3.cpp  4.cpp  6.cpp  7.cpp
pbs 2/: 3.cpp  4.cpp  5.cpp
pbs 2 2019-03-13/: 2.cpp  mz02-1.cpp
pbs 3/: 4.cpp  5.cpp
pbs 3 2019-03-18/: 1.cpp  2.cpp  mz03-1.cpp  mz03-2.cpp  mz03-3.cpp
pbs 4/: 1.cpp  2.cpp  3.cpp  4.cpp
pbs 4 2019-04-01/: 1.cpp  2.cpp  3.cpp
pbs 5/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
pbs 6/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
pbs 7/: 1.cpp  2.cpp  3.cpp  5.cpp
pbs 8/: 1.cpp  2.cpp  3.cpp  5.cpp
pbs 9/: 1.cpp  2.cpp  4.cpp
sem 2019-02-11/: peregruz.cpp  sem.txt  str.cpp
sem 2019-02-18/: Holder.cpp  boolbool.cpp  inout.cpp  ops.cpp  sem.txt  sem03.cpp
sem 2019-02-25/: const.cpp  defpar.cpp  integer.cpp  lmbd.cpp  mutable.cpp  opbrk.cpp  proxy.cpp  sem.txt  static.cpp  static1.cpp  str.cpp
sem 2019-03-04/: obana.txt  sem.cpp
sem 2019-03-11/: algo.cpp  auto.cpp  classtempl.cpp  functempl.cpp  functempl3.cpp  sem.txt
sem 2019-03-18/: nasledovaniye.cpp
sem 2019-03-25/: dyncast.cpp  exception.cpp  nasled.cpp  virt.cpp
sem 2019-04-01/: rvalue ref.cpp  sem.cpp  sem.txt  strs to vec.cpp  unique ptr.cpp
sem 2019-04-08/: sem.cpp  sem1.cpp  sem2.cpp  shared.cpp
sem 2019-04-15/: smart ptrs.cpp  thr2.cpp  threads.cpp  threads.txt
sem 2019-04-22/: ips flashback.cpp  phils.cpp  (+2 more)
(+8 files in other folders)
